--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <section class="section-intro padding-y-sm">
     <div class="container">
     <div class="intro-banner-wrap">
-        <img src="{% static 'images/banners/1.jpg' %}" class="img-fluid rounded">
+        <img src="{% static 'images/banners/1.jpg' %}" class="img-fluid rounded" alt="بارگذاری با مشکل مواجه شد">
     </div>
 
     </div> <!-- container //  -->
@@ -19,7 +19,7 @@
     <div class="container">
 
     <header class="section-heading">
-        <a href={% url 'store' %} class="btn btn-outline-primary float-left">نمایش همه</a>
+        <a href="{% url 'store' %}" class="btn btn-outline-primary float-left">نمایش همه</a>
         <h3 class="text-right section-title">کالاهای پرطرفدار</h3>
     </header><!-- sect-heading -->
 
