--- a/templates/purchase/receipt.html
+++ b/templates/purchase/receipt.html
@@ -24,7 +24,7 @@
                                 <div class="form-row">
                                     <div class="col form-group">
                                         <label for="amount">مبلغ پرداختی (﷼)</label>
-                                        <input id="amount" class="form-control" placeholder="مبلغ پرداختی" name="amount"  value="{{ order.cost }}" />
+                                        <input id="amount" class="form-control" placeholder="مبلغ پرداختی" name="amount"  value="{{ order.must_be_paid }}" />
                                         <!--{{ form.amount }}-->
                                     </div>
                                 </div>
