--- a/pheelstyle/rawstatic/css/style.css
+++ b/pheelstyle/rawstatic/css/style.css
@@ -67,11 +67,11 @@ body {
     border: 0;
 }
 
-.rating > label {
+.rating > .star {
     float: right;
 }
 
-.rating > label:before {
+.rating > .star:before {
     display: inline-block;
     font-size: 1.1rem;
     font-family: FontAwesome, serif;
@@ -87,14 +87,13 @@ body {
     padding-right: 0;
 }
 
-input:checked ~ label, label:hover ~ label {
+input:checked ~ .star, .star:hover ~ .star {
     color: #ffb503;
 }
 
 /* highlight hover for previous rate */
-input:checked + label:hover, input:checked ~ label:hover, input:checked ~ label:hover ~ label,
-    label:hover ~ input:checked ~ label
+input:checked + .star:hover, input:checked ~ .star:hover, input:checked ~ .star:hover ~ .star,
+    .star:hover ~ input:checked ~ .star
 {
     color: #cc9000;
-
 }
