--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -121,18 +121,18 @@
                                 </tbody>
                             </table>
                         <div class="card">
-                            <div class="card-body text-right">
+                            <div dir="rtl"  class="card-body text-right">
                                 <dl class="dlist-align">
                                   <dt>قیمت اصلی:</dt>
-                                  <dd dir="ltr" class="text-left text-primary">{{ stack.cost }} $</dd>
+                                  <dd class="text-left text-primary">{{ stack.cost }}&nbsp;&nbsp; تومن</dd>
                                 </dl>
                                 <dl class="dlist-align">
                                   <dt>تخفیف:</dt>
-                                  <dd dir="ltr" class="text-left text-danger"> -{{ stack.discounts }} $</dd>
+                                  <dd class="text-left text-danger">{{ stack.discounts }}-  &nbsp;تومن</dd>
                                 </dl>
                                 <dl class="dlist-align">
                                   <dt>هزینه نهایی:</dt>
-                                  <dd dir="ltr" class="text-left text-success b"><strong>{{ stack.final_cost }} $</strong></dd>
+                                  <dd class="text-left text-success b"><strong>{{ stack.final_cost }}</strong>&nbsp;&nbsp; تومن</dd>
                                 </dl>
                                 <hr>
                                 <button type="submit" class="btn btn-success btn-block expandable-button"> ثبت سفارش </button>
