--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -129,7 +129,7 @@
                                             <div class="fix-height">
                                                 <a href="{{ product.url }}" class="title text-center">{{ product }}</a>
                                                 <div class="price-wrap  text-center mt-2">
-                                                    <span class="price">${{ product.price }}</span>
+                                                    <span class="price">{{ product.price }} تومن</span>
                                                 </div> <!-- price-wrap.// -->
                                             </div>
                                             {% if product.stock <= 0  %}
