--- a/pheelstyle/rawstatic/css/style.css
+++ b/pheelstyle/rawstatic/css/style.css
@@ -97,3 +97,9 @@ input:checked + .star:hover, input:checked ~ .star:hover, input:checked ~ .star:
 {
     color: #cc9000;
 }
+.comment {
+    border-radius: 15px 15px 0 0;
+}
+.comment:hover {
+    opacity: 0.7;
+}
