--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,6 @@ body {
     transition: all 1s;
     -webkit-transition: all 1s;
 }
-
 .expand-opacity-animation {
     opacity: 1;
     -webkit-transition: opacity 0.25s ease-in-out;
@@ -97,4 +96,10 @@ input:checked + .star:hover, input:checked ~ .star:hover, input:checked ~ .star:
     .star:hover ~ input:checked ~ .star
 {
     color: #cc9000;
+}
+.comment {
+    border-radius: 15px 15px 0 0;
+}
+.comment:hover {
+    opacity: 0.7;
 }
