--- a/templates/store/product.html
+++ b/templates/store/product.html
@@ -130,14 +130,35 @@
                             </div>
                         </div>
                     </form>
+                <hr />
                 </div> <!-- col.// -->
                 <div class="col-12 text-right">
-
-                    <article dir="rtl" class="box mb-3">
+                    <hr />
+                    <div dir="rtl" class="box mb-3 bg-transparent">
                         <header class="section-heading">
-                            <h3>فیلان بیسار</h3>
+                            <h3>فیلان بیسارها:</h3>
                         </header>
-                    </article>
+                        {% for review in reviews %}
+                            <article dir="rtl" class="box mb-3 comment">
+                                <div class="icontext w-100">
+                                    <div class="text">
+                                        <span dir="ltr" class="date text-muted float-md-left">{{ review.updated_at }}</span>
+                                        <h4 class="mb-1">{{ review.user }}</h4>
+                                        <div dir="ltr" class="text-left mt-2">
+                                            <i class="fa fa-star{% if review.rating == 0.5 %}-half-o{% elif review.rating < 1 %}-o {% endif %}" aria-hidden="true"></i>
+                                            <i class="fa fa-star{% if review.rating == 1.5 %}-half-o{% elif review.rating < 2 %}-o {% endif %}" aria-hidden="true"></i>
+                                            <i class="fa fa-star{% if review.rating == 2.5 %}-half-o{% elif review.rating < 3 %}-o {% endif %}" aria-hidden="true"></i>
+                                            <i class="fa fa-star{% if review.rating == 3.5 %}-half-o{% elif review.rating < 4 %}-o {% endif %}" aria-hidden="true"></i>
+                                            <i class="fa fa-star{% if review.rating == 4.5 %}-half-o{% elif review.rating < 5 %}-o {% endif %}" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mt-3 mx-5">
+                                    {{ review.comment }}
+                                </div>
+                            </article>
+                        {% endfor %}
+                    </div>
                 </div>
             </div> <!-- row.// -->
 
