average rating added

--- a/templates/purchase/receipt.html
+++ b/templates/purchase/receipt.html
@@ -43,7 +43,7 @@
                                     </div>
                                 </div>
                                 <div class="form-row">
-                                    <button class="btn btn-outline-info btn-block btn-large" type="submit">ثبت تراکنش</button>
+                                    <button class="btn btn-outline-success btn-block btn-large" type="submit">ثبت تراکنش</button>
                                 </div>
                             </div>
                         </div> <!-- card.// -->
