--- a/templates/store/stack.html
+++ b/templates/store/stack.html
@@ -97,15 +97,19 @@
                         <div dir="rtl"  class="card-body text-right">
                             <dl class="dlist-align">
                               <dt>قیمت اصلی:</dt>
-                              <dd class="text-left text-primary">{{ stack.cost }}&nbsp;&nbsp; تومن</dd>
+                              <dd class="text-center text-primary">{{ stack.cost }}&nbsp;&nbsp; تومن</dd>
                             </dl>
                             <dl class="dlist-align">
                               <dt>تخفیف:</dt>
-                              <dd class="text-left text-danger">{{ stack.discounts }}-  &nbsp;تومن</dd>
+                                {% if stack.discounts %}
+                                  <dd class="text-center text-danger">{{ stack.discounts }}-  &nbsp;تومن</dd>
+                                {% else %}
+                                  <dd class="mx-5 text-center text-danger">-</dd>
+                                {% endif %}
                             </dl>
                             <dl class="dlist-align">
                               <dt>هزینه نهایی:</dt>
-                              <dd class="text-left text-success b"><strong>{{ stack.final_cost }}</strong>&nbsp;&nbsp; تومن</dd>
+                              <dd class="text-center text-success b"><strong>{{ stack.final_cost }}</strong>&nbsp;&nbsp; تومن</dd>
                             </dl>
                             <hr>
                             <a href="{% url 'checkout' %}" class="btn btn-warning btn-block expandable-button"> پرداخت </a>
