--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,13 +1,13 @@
 {% load static %}
 
-<html dir="rtl" lang="en">
+<html dir="rtl" lang="fa">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="pragma" content="no-cache" />
-    <meta http-equiv="cache-control" content="max-age=604800" />
+    <meta content="no-cache" />
+    <meta content="max-age=604800" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>PHEEL</title>
+    <title>فیل استایل</title>
     <!-- header logo -->
     <link href="{% static 'images/logo.png' %}" rel="shortcut icon" type="image/x-icon">
 
