your orders section added.

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -7,7 +7,7 @@
         {% include 'includes/toast.html' %}
         <div class="container">
             <div class="row">
-                {% include 'user/dashboard/sidebar.html' %}
+                {% include 'dashboard/sidebar.html' %}
                 <main class="col-lg-9 text-right mt-4">
                     <article class="card bg-transparent" style="border: none">
                         <header class="bg-transparent" style="z-index: 1">
@@ -58,7 +58,7 @@
                                     <div class="card h-100" style="border-radius: 15px">
                                         <div class="card-body">
                                             <b class="card-title">تعداد زد و بندها</b>
-                                            <h1 class="text-success">{{ your_orders }}</h1>
+                                            <h1 class="text-success">{{ your_orders_count }}</h1>
                                             <a class="btn btn-block btn-outline-secondary" href="#">مشاهده</a>
                                         </div>
                                     </div>
