--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -17,10 +17,10 @@
           <form action="{% url 'login' %}" method="POST">
               {% csrf_token %}
               <div class="form-group">
-                 <input type="text" class="form-control" name="contact" placeholder="شماره تلفن یا ایمیل" >
+                 <input type="text" class="form-control text-center" name="contact" placeholder="شماره تلفن یا ایمیل" >
               </div> <!-- form-group// -->
               <div class="form-group">
-                <input type="password" class="form-control" name="password" placeholder="رمزشب" >
+                <input type="password" class="form-control  text-center" name="password" placeholder="رمزشب" >
               </div> <!-- form-group// -->
 
               <div class="form-group">
