--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,6 +20,9 @@
 
     <!-- Font awesome 5 -->
     <link href="{% static 'fonts/fontawesome/css/font-awesome.min.css' %}" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/select2.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/perfect-scrollbar.css' %}">
 
     <!-- custom style -->
     <link href="{% static 'css/custom.fonts.css' %}" rel="stylesheet" type="text/css"/>
@@ -27,6 +30,9 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
 
+
+    <script src="{% static 'js/popper.js' %}"></script>
+    <script src="{% static 'js/select2.min.js' %}"></script>
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
