--- a/templates/store/product.html
+++ b/templates/store/product.html
@@ -86,7 +86,7 @@
                                 {% if not this_product.available %}
                                     <button disabled class="btn btn-block btn-danger expandable-button">موجود نیست هنوز</button>
                                 {% else %}
-                                    <button type="submit" class="btn btn-lg btn-block btn-primary expandable-button">بزن به خرمن</button>
+                                    <button type="submit" class="btn btn-lg btn-block btn-primary expandable-button">نظرمه</button>
                                 {% endif %}
                                 <!--<a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a> -->
                              </article> <!-- product-info-aside .// -->
