--- a/templates/store/stack.html
+++ b/templates/store/stack.html
@@ -112,7 +112,7 @@
                               <dd class="text-center text-success b"><strong>{{ stack.final_cost }}</strong>&nbsp;&nbsp; تومن</dd>
                             </dl>
                             <hr>
-                            <a href="{% url 'checkout' %}" class="btn btn-warning btn-block expandable-button"> پرداخت </a>
+                            <a href="{% url 'order' %}" class="btn btn-warning btn-block expandable-button"> زد و بند </a>
                             <a href="{% url 'store' %}" class="btn btn-secondary btn-block expandable-button"> ادامه خرید </a>
 
                         </div> <!-- card-body.// -->
