profile edit completed; avatar change added; avatar preview added

--- a/pheelstyle/rawstatic/css/style.css
+++ b/pheelstyle/rawstatic/css/style.css
@@ -8,6 +8,10 @@ body {
     transition: all 1s;
     -webkit-transition: all 1s;
 }
+#newAvatarPreview {
+    transition: opacity 0.5s;
+    -webkit-transition: opacity 0.5s;
+}
 .expand-opacity-animation {
     opacity: 1;
     -webkit-transition: opacity 0.25s ease-in-out;
