--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -12,17 +12,46 @@
                         <header class="bg-transparent" style="z-index: 1">
                                 <div class="row">
                                     <div class="col-2">
-                                        <img src="{% static 'images/noavatar.jpeg' %}" alt="آواتارت" width="96" height="96" style="border-radius: 50%">
+                                        <img src="{{ user.profile.avatar.url }}" alt="بارگذاری آواتار ناموفق بود!" width="96" height="96" style="border-radius: 50%">
                                     </div>
+                                    <div class="col-md-8 col-7"></div>
+                                    <div class="col-2 text-left">
+                                        <img id="newAvatarPreview" src="{{ user.profile.avatar.url }}" alt="بارگذاری آواتار ناموفق بود!" width="96" height="96" style="border-radius: 50%">
+                                    </div>
+
                                 </div>
                         </header>
                         <div class="card-body" style="border-radius: 15px; border: 1px solid lightgray; margin-top: -2%; z-index: 0">
-                            <form method="post" action="{% url 'user-profile' %}">
+                            <form method="post" action="{% url 'user-profile' %}" enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="card">
                                     <div class="card-body">
-                                        <div dir="ltr"  class="form-row">
+                                        <div class="form-row">
                                             {{ profile_form.avatar }}
+                                            <script>
+                                                const newAvatarPreview = document.getElementById("newAvatarPreview");
+                                                window.onload = function() {
+                                                    newAvatarPreview.style.opacity = "0";
+                                                    popScreenUp();
+                                                    document.getElementById("fileChangeAvatar").addEventListener('change', function () {
+                                                        try{
+                                                            if(this.files && this.files[0].name){
+                                                                const oFReader = new FileReader();
+                                                                oFReader.readAsDataURL(this.files[0]);
+                                                                oFReader.onload = (oFREvent) => {
+                                                                    newAvatarPreview.style.opacity = "1";
+                                                                    newAvatarPreview.src = oFREvent.target.result;
+                                                                };
+                                                            }
+                                                            else newAvatarPreview.style.opacity = "0";
+                                                        }
+                                                        catch (ex) {
+                                                            console.log("New avatar selected is an unsupported file because:", ex);
+                                                            newAvatarPreview.style.opacity = "0";
+                                                        }
+                                                    })
+                                                }
+                                            </script>
                                         </div>
                                         <hr />
                                         <div class="form-row">
@@ -66,12 +95,11 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <button type="submit" class="btn btn-block btn-info">ذخیره</button>
+                                    <button type="submit" class="btn btn-block btn-outline-info">ذخیره</button>
                                 </div> <!-- card.// -->
                             </form>
                             <div class="row" style="height: 3rem">
-                            {% include 'includes/toast.html' %}
-
+                                {% include 'includes/toast.html' %}
                             </div>
                         </div> <!-- card-body .// -->
                     </article> <!-- order-group.// -->
